Bug 168609 - LibreOffice writer 25.8.1 crashes when trying to insert a frame for a table
Summary: LibreOffice writer 25.8.1 crashes when trying to insert a frame for a table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.1.1 release
Hardware: x86-64 (AMD64) macOS (All)
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:26.2.0 target:25.8.3 target:25...
Keywords:
Depends on:
Blocks: Writer-Tables-Select Crash
  Show dependency treegraph
 
Reported: 2025-09-29 11:29 UTC by van.parunak
Modified: 2025-10-01 10:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description van.parunak 2025-09-29 11:29:37 UTC
Description:
I've just installed LO 25.8.1.1 on Mac with Apple silicon, running Tahoe. I open a new document, insert a TABLE (6 columns, 6 rows), select it, and from the Insert menu choose FRAME. The application crashes.

Steps to Reproduce:
1.Launch writer
2.Create new text document
3.Insert a table (I did 6 columns, 6 rows)
4. Select the table
5. From Insert menu, select Insert Frame.
6. The frame dialog wants to make the frame 8.5" wide. Set this to 6.5 (I'm on US letter sized paper with 1" marging), set height to 2"
7. Try to close the dialog

Actual Results:
Program crashes

Expected Results:
It should have put me back in edit mode with the table framed so that I could next insert a caption


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.1.1 (AARCH64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 10; OS: macOS 26.0; UI render: Skia/Raster; VCL: osx
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Here's the first part of the crash report (the rest won't fit):
-------------------------------------
Translated Report (Full Report Below)
-------------------------------------
Process:             soffice [92145]
Path:                /Applications/LibreOffice_25_8.app/Contents/MacOS/soffice
Identifier:          org.libreoffice.script
Version:             25.8.1.1 (25.8.1.1)
Code Type:           ARM-64 (Native)
Role:                Foreground
Parent Process:      launchd [1]
Coalition:           org.libreoffice.script [1259]
User ID:             501

Date/Time:           2025-09-29 07:03:54.7651 -0400
Launch Time:         2025-09-29 07:02:13.6139 -0400
Hardware Model:      MacBookPro18,1
OS Version:          macOS 26.0 (25A354)
Release Type:        User

Crash Reporter Key:  C14BA034-FFA7-A958-ECA4-FD27B8577197
Incident Identifier: 861E19F3-FEE7-4535-A658-F0C584EED3F9

Time Awake Since Boot: 150000 seconds

System Integrity Protection: enabled

Triggered by Thread: 0

Exception Type:    EXC_CRASH (SIGABRT)
Exception Codes:   0x0000000000000000, 0x0000000000000000

Termination Reason:  Namespace SIGNAL, Code 6, Abort trap: 6
Terminating Process: soffice [92145]


Application Specific Information:
abort() called
Comment 1 Dieter 2025-09-29 16:26:52 UTC
No crash with

Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

So might be macOS only
Tested with width 15cm and height 4 cm
Comment 2 raal 2025-09-29 16:58:00 UTC
No crash in Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8ea8e254a3151f5390f3a10ff156fcaf8e7c5d5c
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Please test in safe mode, Menu/Help/Restart in Safe Mode
Comment 3 Patrick (volunteer) 2025-09-29 21:57:24 UTC
I can reproduce this in my local master build on macOS Tahoe. For step 4 in comment #0, I clicked in the table and then pressed Command-A to select all table cells.

Below is the main thread's stack trace. It appears that an uncaught Objective-C exception is being thrown. I'll try and see if I can trap where objc_exception_rethrow() is called in a debugger:

(lldb) bt
* thread #1, queue = 'com.apple.main-thread', stop reason = signal SIGSTOP
  * frame #0: 0x00000001931bd42c libsystem_kernel.dylib`__wait4 + 8
    frame #1: 0x00000001a63a6fb8 libswiftCore.dylib`_swift_spawnBacktracer + 900
    frame #2: 0x00000001a63a8b10 libswiftCore.dylib`(anonymous namespace)::handle_fatal_signal(int, __siginfo*, void*) + 384
    frame #3: 0x0000000100fc66b4 libuno_sal.dylib.3`(anonymous namespace)::signalHandlerFunction(int, __siginfo*, void*) + 1012
    frame #4: 0x0000000193202744 libsystem_platform.dylib`_sigtramp + 56
    frame #5: 0x00000001931f8888 libsystem_pthread.dylib`pthread_kill + 296
    frame #6: 0x00000001930fe808 libsystem_c.dylib`abort + 124
    frame #7: 0x00000001931ac858 libc++abi.dylib`__abort_message + 132
    frame #8: 0x00000001931abc4c libc++abi.dylib`std::__terminate(void (*)()) + 48
    frame #9: 0x00000001931af648 libc++abi.dylib`__cxa_rethrow + 188
    frame #10: 0x0000000192ded78c libobjc.A.dylib`objc_exception_rethrow + 44
    frame #11: 0x0000000197bd07f0 AppKit`-[NSApplication _handleEvent:] + 148
    frame #12: 0x000000019767d748 AppKit`-[NSApplication run] + 408
    frame #13: 0x0000000197669694 AppKit`NSApplicationMain + 880
    frame #14: 0x00000001088ca830 libvclplug_osxlo.dylib`AquaSalInstance::SVMainHook(int*) + 140
    frame #15: 0x000000010647db7c libvcllo.dylib`ImplSVMain() + 352
    frame #16: 0x0000000101186eb0 libsofficeapp.dylib`soffice_main + 208
    frame #17: 0x0000000100f0c51c soffice`main + 20
    frame #18: 0x0000000192e39d54 dyld`start + 7184
Comment 4 Commit Notification 2025-09-30 20:01:34 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b86c16870251877962e986ec9d1418e1f376241f

tdf#168609 catch exceptions from SwXText::getString()

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Patrick (volunteer) 2025-09-30 20:03:27 UTC
I have committed a fix for this bug and the fix will be in tomorrow's (01 October 2025) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for macOS testers: the nightly master build installer does not overwrite any LibreOffice official versions. Instead, it will be installed as a separate application called "LibreOfficeDev" in the /Applications folder.

Because this is a "test" build, you will need to do the following steps before you launch the LibreOfficeDev application:

1. Go to the Finder and navigate to the /Applications/Utilities folder
2. Launch the "Terminal" application
3. Paste the following command in the Terminal application window and press the Return key to execute the command:

   xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 6 Commit Notification 2025-10-01 07:40:37 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/078f04ac171034e42003b219b41a7522093ec4f5

tdf#168609 catch exceptions from SwXText::getString()

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-10-01 10:45:11 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-2":

https://git.libreoffice.org/core/commit/e9c4c10769be076b300aed341136254cc523a940

tdf#168609 catch exceptions from SwXText::getString()

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.