tdf#168609 catch exceptions from SwXText::getString()

Apparently, implementions of XTextRange::getString()
such as SwXText::getString() can throw an exception.

Change-Id: Ie23651bbc36466ec95a037142f760dd59c7d6417
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191645
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins